Bug 1522035 - Set HAVE_ALIGNED_MALLOC as global macro and avoid redefining in libdav1d. r=firefox-build-system-reviewers,mshal

Differential Revision: https://phabricator.services.mozilla.com/D17632